--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 	</head>
 	<body>
 		<p>Esto es una prueba<p>
-    <script src="external.js"></script>
+    <script type="module" src="/external.js"></script>
 	</body>
 </html>
