Add alert before process orders and visual improvements

--- a/index.html
+++ b/index.html
@@ -10,13 +10,16 @@
   <link rel="stylesheet" href="./styles/index.css">
   <link rel="stylesheet" href="./styles/app_result.css">
 
-  <title>Formateador de Pedidos</title>
+  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+  <script type='module' src='index.js'></script>
+
+  <title>Formato de Pedidos</title>
 </head>
 <body>
   <header>
       <img src="assets/chemicals-logo.png" alt="logo">
       <div class="header__title-container">
-        <h1>Formateador de Pedidos</h1>
+        <h1>Formato de Pedidos</h1>
         <h2>Corporación Chemicals</h2>
       </div>
   </header>
@@ -69,6 +72,5 @@
       <button type="button" id="button-endOrders" class="footer__end-button">Procesar Pedidos</button>
   </footer>
   <section id="app-result" class="app_result"></section>
-  <script type='module' src='index.js'></script>
 </body>
 </html>
