--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <title>Formato de Pedidos</title>
 
     <!-- css -->
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/print-styles.css" media="print">
     
-    <!-- Js -->
+    <!-- Js --><link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script type="module" src="index.js"></script>
 </head>
