add meta description tag

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <title>Formato de Pedidos</title>
+    <meta name="description" content="Format orders to speed up processes">
 
     <!-- css -->
     <link rel="stylesheet" href="styles/style.css">
