Improve order in assemble section

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     
     <!-- Js --><link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.15/lodash.min.js"></script>
     <script type="module" src="index.js"></script>
 </head>
 <body>
