make finish order process

--- a/index.html
+++ b/index.html
@@ -123,15 +123,16 @@
         </footer>
         <button type="submit" id="finish-order" class="form-button send-button">Finalizar Pedido</button>
       </section>
+    
+      <!-- Order List Summary -->
+      <section class="summary total-orders-summary">
+        <h2>Pedidos totales</h2>
+        <ol class="orders-summary-list" id="total-orders-summary">        
+        </ol>
+        <button type="submit" id="finish-session" class="form-button send-button">Enviar Pedido</button>
+      </section>
     </form>
 
-    <!-- Order List Summary -->
-    <section class="summary">
-      <h2>Pedidos totales</h2>
-      <ol id="total-orders-list">        
-      </ol>
-      <button type="submit" id="finish-session" class="form-button send-button">Enviar Pedido</button>
-    </section>
   </main>
 </body>
 </html>
