finish to making pdf sections functions

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <link rel="stylesheet" href="./styles/style.css">
+  <link rel="stylesheet" href="./styles/pdf-styles.css">
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -129,10 +131,10 @@
         <h2>Pedidos totales</h2>
         <ol class="orders-summary-list" id="total-orders-summary">        
         </ol>
-        <button type="submit" id="finish-session" class="form-button send-button">Enviar Pedido</button>
+        <button type="submit" id="finish-session" class="form-button send-button">Procesar Pedidos</button>
       </section>
     </form>
-
   </main>
+  <section id="pdf-results"></section>
 </body>
 </html>
