change input type from client identification

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
               <option value="V">V</option>
             </select>
 
-            <input required type="number" name="client-identification" id="client-identification" />
+            <input required type="tel" name="client-identification" id="client-identification" />
           </footer>
         </div>
 
