add premade order option

--- a/index.html
+++ b/index.html
@@ -110,6 +110,14 @@
         </div>
 
         <button type="button" id="add-order" class="form-button add-button">Agregar</button>
+
+        <div class="form-data-wrapper">
+          <header class="premade-order-header">
+            <label for="premade-order">Registrar Pedido</label>
+            <button type="button" id="run-premade-order">Cargar</button>
+          </header>
+          <textarea name="premade-order" id="premade-order" cols="10" rows="10"></textarea>
+        </div>
       </section>
       
       <!-- Order Summary -->
