add styles to premade order section

--- a/index.html
+++ b/index.html
@@ -111,13 +111,12 @@
 
         <button type="button" id="add-order" class="form-button add-button">Agregar</button>
 
-        <div class="form-data-wrapper">
-          <header class="premade-order-header">
-            <label for="premade-order">Registrar Pedido</label>
-            <button type="button" id="run-premade-order">Cargar</button>
-          </header>
+        <div class="form-data-wrapper premade-order-wrapper">
+          <label for="premade-order">Registrar Pedido</label>
           <textarea name="premade-order" id="premade-order" cols="10" rows="10"></textarea>
         </div>
+        
+        <button type="button" id="run-premade-order">Registrar</button>
       </section>
       
       <!-- Order Summary -->
