add note to finished orders

--- a/index.html
+++ b/index.html
@@ -145,6 +145,8 @@
           <p>Total</p>
           <h3 id="order-price" class="order-price">$ 0.00</h3>
         </footer>
+        <label for="order-summary-note">Nota del pedido</label>
+        <textarea name="order-summary-note" id="order-summary-note" cols="30" rows="10"></textarea>
         <button type="submit" id="finish-order" class="form-button send-button">Finalizar Pedido</button>
       </section>
     
